PART3-Core/11.Kubernetes_Orchestration/Test_ConfigMap_Volume/nginx_tls_to_pods/nginx-tls-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-tls-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-tls-pod
  template:
    metadata:
      labels:
        app: nginx-tls-pod
    spec:
      containers:
      - name: nginx
        image: nginx:1.25
        ports:
        - containerPort: 443
        volumeMounts:
        - name: secret-volume
          mountPath: /etc/nginx/certs
        - name: config-volume
          mountPath: /etc/nginx/conf.d
      volumes:
      - name: secret-volume
        secret:
          secretName: backend-tls-secret
      - name: config-volume
        configMap:
          name: nginx-tls-configmap
