PART3-Core/11.Kubernetes_Orchestration/Test_ConfigMap_Volume/nginx_tls_to_pods/nginx-tls-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-tls-service
spec:
  type: ClusterIP
  selector:
    app: nginx-tls-pod
  ports:
  - port: 443
    targetPort: 443
