PART3-Core/11.Kubernetes_Orchestration/Test_ConfigMap_Volume/nginx_tls_to_pods/mynginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mynginx-tls-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - mynginx.com
    secretName: ingress-tls-secret
  rules:
  - host: mynginx.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-tls-service
            port:
              number: 443
